--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,1 +1,70 @@
-<p>login works!</p>
+<div class="flex justify-center items-center min-h-screen bg-gray-50">
+  <div
+    class="w-full max-w-md p-8 bg-white rounded-lg shadow-lg border border-gray-200"
+  >
+    <h2 class="text-2xl font-semibold text-center text-gray-700 mb-6">
+      Sign In
+    </h2>
+    <form (submit)="submit($event)"  class="space-y-6">
+      <!-- Email Field -->
+      <div>
+        <label for="email" class="block text-sm font-medium text-gray-600"
+          >Email Address</label
+        >
+        <input
+          type="email"
+          id="email"
+          name="email"
+          [(ngModel)] = "email"
+          required
+          placeholder="Enter your email"
+          class="mt-2 block w-full px-4 py-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out shadow-sm"
+        />
+      </div>
+
+      <!-- Password Field -->
+      <div>
+        <label for="password" class="block text-sm font-medium text-gray-600"
+          >Password</label
+        >
+        <input
+          type="password"
+          id="password"
+          name="password"
+          [(ngModel)] = "password"
+          autocomplete="off"
+          required
+          placeholder="Enter your password"
+          class="mt-2 block w-full px-4 py-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out shadow-sm"
+        />
+      </div>
+
+      <!-- Submit Button -->
+      <div>
+        <button
+          type="submit"
+          class="w-full py-3 bg-blue-600 text-white font-semibold rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition duration-200"
+        >
+          Log In
+        </button>
+      </div>
+
+      <!-- Forgot Password Link -->
+      <div class="text-center">
+        <a href="#" routerLink class="text-sm text-blue-500 hover:underline"
+          >Forgot Password?</a
+        >
+      </div>
+    </form>
+
+    <!-- Sign up Link -->
+    <div class="mt-4 text-center">
+      <p class="text-sm text-gray-600">
+        Don't have an account?
+        <a href="#" routerLink="/signup" class="text-blue-500 hover:underline"
+          >Sign up</a
+        >
+      </p>
+    </div>
+  </div>
+</div>
