--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<app-navbar />
+
+<div class="max-w-[900px] my-2rem mx-auto">
+  <app-createtask />
+  <div class="grid grid-cols-4 gap-[1rem] items-center mt-[1rem]">
+
+
+ 
+    @for(task of tasks; track task._id){
+
+        <app-tasks [task]="task"/>
+
+    }
+
+
+   
+  </div>
+</div>
