--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -80,7 +80,7 @@
         <select
           id="role"
           name="role"
-          [(ngModel)]="formData.roles"
+          [(ngModel)]="formData.role"
           required
           class="mt-2 block w-full px-4 py-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out shadow-sm"
         >
@@ -105,7 +105,7 @@
       <div class="mt-4 text-center">
         <p class="text-sm text-gray-600">
           Have an account?
-          <a href="#" routerLink="/signup" class="text-blue-500 hover:underline"
+          <a href="#" routerLink="/" class="text-blue-500 hover:underline"
             >Sign in</a
           >
         </p>
