--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
     <h2 class="text-2xl font-semibold text-center text-gray-700 mb-6">
       Sign In
     </h2>
-    <form (submit)="submit($event)"  class="space-y-6">
+    <form (submit)="submit($event)" class="space-y-6">
       <!-- Email Field -->
       <div>
         <label for="email" class="block text-sm font-medium text-gray-600"
@@ -15,7 +15,7 @@
           type="email"
           id="email"
           name="email"
-          [(ngModel)] = "email"
+          [(ngModel)]="email"
           required
           placeholder="Enter your email"
           class="mt-2 block w-full px-4 py-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 ease-in-out shadow-sm"
@@ -31,7 +31,7 @@
           type="password"
           id="password"
           name="password"
-          [(ngModel)] = "password"
+          [(ngModel)]="password"
           autocomplete="off"
           required
           placeholder="Enter your password"
@@ -59,11 +59,9 @@
 
     <!-- Sign up Link -->
     <div class="mt-4 text-center">
-      <p class="text-sm text-gray-600">
+      <p class="text-sm text-gray-600 cursor-pointer" (click)="navigateSignup()">
         Don't have an account?
-        <a href="#" routerLink="/signup" class="text-blue-500 hover:underline"
-          >Sign up</a
-        >
+        <span class="text-blue-500 hover:underline">Sign up</span>
       </p>
     </div>
   </div>
