--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Outfit:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+*{
+
+    margin:0;
+
+    padding:0;
+
+    box-sizing:border-box;
+
+    font-family:'Outfit',sans-serif;
+}
+
+img{
+    width: 100%;
+}
